--- a/hw-mathlog2202.cabal
+++ b/hw-mathlog2202.cabal
@@ -26,7 +26,7 @@ library
 
     -- LANGUAGE extensions used by modules in this package.
     -- other-extensions:
-    build-depends:    base ^>=4.12,
+    build-depends:    base >=4.12,
                       containers ^>= 0.6, 
                       mtl ^>= 2.2.2,
                       picosat == 0.1.6
@@ -42,7 +42,7 @@ executable hw-mathlog2202
     -- LANGUAGE extensions used by modules in this package.
     -- other-extensions:
     build-depends:
-        base ^>=4.12.0.0,
+        base >=4.12.0.0,
         containers ^>= 0.6, 
         mtl ^>= 2.2.2,
         picosat == 0.1.6,
